<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Connect</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="about_app">Help</string>
    <string name="profile_page">Profile</string>
    <string name="title_activity_info">Info</string>
    <string name="contacts_list">My Card</string>
    <string name="title_activity_contacts__list">My Card</string>
    <string name="title_activity_list_of__contacts">Received Cards</string>
    <string name="app_id">1428657584078910</string>
    <string name="title_activity_card_selection">CardSelection</string>

</resources>
