<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="singh.saurabh.connect.MainActivity" >

    <item 
        android:id="@+id/profile" 
        android:orderInCategory="100" 
        android:title="@string/profile_page">
        
    </item>
    
    <item 
        android:id="@+id/contacts_list" 
        android:orderInCategory="101" 
        android:title="@string/contacts_list">
        
    </item>
    
    <item android:id="@+id/list_of_contacts" android:title="@string/title_activity_list_of__contacts" android:orderInCategory="102"></item><item
        android:id="@+id/action_settings"
        android:orderInCategory="103"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item 
        android:id="@+id/help" 
        android:title="@string/about_app" 
        android:orderInCategory="104" />
    
    
    

</menu>
